# libcrypto-mktdata

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindDate.cmake  FindIXWebSocket.cmake  FindIXWebSockets.cmake
include/: config.h  marketdata.h
include/cloudwall/crypto-mktdata/: binance.h  bitfinex.h  bitmex.h  bitstamp.h  coinbase.h  core.h  kraken.h  poloniex.h  websocket_client.h
src/: binance.cpp  bitfinex.cpp  bitmex.cpp  bitstamp.cpp  coinbase.cpp  coinbase.pem  config.cpp  core.cpp  kraken.cpp  marketdata.cpp  print_client_tls.cpp  websocket_client.cpp
test/: bitmex_test.cpp  bitstamp_test.cpp  coinbase_test.cpp  config.json  config_test.cpp  core_test.cpp  kraken_test.cpp  marketdata_test.cpp
